--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGODB_URI = mongodb://localhost:27017/s1
+# MONGODB_URI = mongodb://0.0.0.0:27017/Topics
+MONGODB_URI = mongodb+srv://hanzala612006it:2Zb57YM2fp1FlLUC@cluster0.pzlyfe5.mongodb.net/Blogs
+
+# 2Zb57YM2fp1FlLUC
