--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html-react-parser": "^5.0.7",
     "mongoose": "^7.6.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
