--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "html-react-parser": "^5.0.7",
+    "jose": "^5.1.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
