--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cookies-next": "^4.1.0",
     "html-react-parser": "^5.0.7",
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
