--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node ./postinstall.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.1.0",
+    "fs-extra": "^11.2.0",
     "html-react-parser": "^5.0.7",
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +28,7 @@
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
+    "tinymce": "^6.8.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
