api changed for deployment

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_URI = mongodb+srv://hanzala612006it:2Zb57YM2fp1FlLUC@cluster0.pzlyfe5.mo
 
 JWT_SECRET = "bcsdjfhj#LvdsfgfhbfnUI%HjbVBUO"
 # 2Zb57YM2fp1FlLUC
+# API = blog-zaara.vercel.app/api/
+
+API = http://localhost:3000/api/
