--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "node ./postinstall.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.7",
     "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -25,10 +24,9 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.0",
+    "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
-    "react-quill": "^2.0.0",
-    "tinymce": "^6.8.2",
+    "sharp": "^0.33.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
